--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -18,6 +18,8 @@ Metrics/ClassLength:
 Metrics/BlockLength:
   AllowedMethods: ['describe']
   Max: 30
+Metrics/CyclomaticComplexity:
+  Max: 15
 
 
 Style/Documentation:
